# beep-base-zephyr

./: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay
docs/: README.md  building.md  communication.md  configuration.md  contributing.md  differences.md  faq.md  getting_started.md  hardware.md  index.md  power_management.md  troubleshooting.md
drivers/flash/: CMakeLists.txt  Kconfig.mx25  mx_flash.c  mx_flash.h
drivers/rtc/: CMakeLists.txt  Kconfig.ds3231  ds3231.c  ds3231.h
drivers/sensor/bme280/: CMakeLists.txt  Kconfig  bme280.c
drivers/sensor/ds18b20/: CMakeLists.txt  Kconfig  ds18b20.c  ds18b20.h
drivers/sensor/hx711/: CMakeLists.txt  Kconfig  hx711.c  hx711.h
drivers/sensor/tlv320adc3100/: CMakeLists.txt  Kconfig  tlv320adc3100.c  tlv320adc3100.h
drivers/w1/: CMakeLists.txt  Kconfig  w1.c  w1.h
dts/bindings/flash/: macronix,mx25.yaml
dts/bindings/rtc/: maxim,ds3231.yaml
dts/bindings/sensor/: avia,hx711.yaml  bosch,bme280.yaml  maxim,ds18b20.yaml  ti,tlv320adc3100.yaml
dts/bindings/w1/: w1-gpio.yaml
scripts/: build.sh  verify_nrf.py
src/: alarm_app.c  alarm_app.h  audio_app.c  audio_app.h  beep_protocol.h  beep_types.h  ble_app.c  ble_app.h  cellular_app.c  cellular_app.h  comm_mgr.c  comm_mgr.h  debug.h  flash_fs.c  flash_fs.h  lorawan_app.c  lorawan_app.h  main.c  power_mgmt.c  power_mgmt.h  rtc_app.c  rtc_app.h
